--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,8 +3,20 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
-  <%=f.label :username%>
-  <%=f.text_field :username%>
+  <div class="field">
+    <%=f.label :first_name%><br />
+    <%=f.text_field :first_name%>
+  </div>
+
+  <div class="field">
+    <%=f.label :last_name%><br />
+    <%=f.text_field :last_name%>
+  </div>
+
+  <div class="field">
+    <%=f.label :username%><br />
+    <%=f.text_field :username%>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
